linera-views-derive/src/snapshots/linera_views_derive__tests__generate_hash_view_code-2.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_hash_view_code(input))
---
#[async_trait::async_trait]
impl linera_views::view::HashableView<CustomContext> for TestView {
    type Hasher = linera_views::sha3::Sha3_256;
    async fn hash_mut(
        &mut self,
    ) -> Result<
        <Self::Hasher as linera_views::view::Hasher>::Output,
        linera_views::view::ViewError,
    > {
        use linera_views::view::{Hasher, HashableView};
        use std::io::Write;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash_mut().await?.as_ref())?;
        hasher.write_all(self.collection.hash_mut().await?.as_ref())?;
        Ok(hasher.finalize())
    }
    async fn hash(
        &self,
    ) -> Result<
        <Self::Hasher as linera_views::view::Hasher>::Output,
        linera_views::view::ViewError,
    > {
        use linera_views::view::{Hasher, HashableView};
        use std::io::Write;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash().await?.as_ref())?;
        hasher.write_all(self.collection.hash().await?.as_ref())?;
        Ok(hasher.finalize())
    }
}

